# task-manager-linux

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
data/: com.task-manager.policy  task-manager.desktop
scripts/: setup-shortcut.sh
src/: app.rs  config.rs  main.rs  window.rs
src/backend/: battery.rs  collector.rs  cpu.rs  de_restart.rs  desktop_resolver.rs  disk.rs  export.rs  gpu.rs  history.rs  memory.rs  mod.rs  net_per_process.rs  network.rs  process.rs  psi.rs  services.rs  shortcut_daemon.rs  shortcut_setup.rs  startup.rs  users.rs  window_resolver.rs
src/model/: app_group.rs  mod.rs  process_info.rs  service_entry.rs  startup_entry.rs  system_snapshot.rs
src/ui/: graph_widget.rs  mod.rs  performance_tab.rs  process_tab.rs  services_tab.rs  startup_tab.rs  users_tab.rs
src/util/: format.rs
style/: style.css
