[package]
name = "task-manager-linux"
version = "0.3.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
procfs = "0.17"
sysinfo = "0.33"
nvml-wrapper = "0.10"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
freedesktop-desktop-entry = "0.7"
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
flume = "0.11"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
evdev = "0.13"

[profile.release]
opt-level = 3
lto = true
